--- a/style.css
+++ b/style.css
@@ -178,11 +178,11 @@ body {
   font-size: 1rem;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 375px) {
   .container {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    justify-content: space-evenly;
+    margin: 50px;
   }
 }/*# sourceMappingURL=style.css.map */
