--- a/style.scss
+++ b/style.scss
@@ -203,13 +203,13 @@ body{
     letter-spacing: normal;
     font-size: 1rem;
 }
-@media (max-width :900px ) {
+@media (max-width :375px ) {
    
     .container{
         display: flex;
         flex-direction: column;
         gap: 20px;
-        justify-content: space-evenly;
+        margin: 50px;
         
     }
    
