--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 body, html {
   width: 100%;
-}
-
-body {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -11,6 +8,8 @@ body {
   font-family: "DM Sans";
   line-height: 0.92;
   letter-spacing: -5px;
+  margin: 0;
+  padding: 10px;
 }
 
 .container {
@@ -19,6 +18,9 @@ body {
   grid-template-rows: 450px 60px 210px 270px;
   gap: 30px;
   grid-template-areas: "one two two three" "one five seven three" "four five seven three" "four six eight eight";
+  max-width: 1500px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .box {
